[metadata]
name = jira-nodered-automation
version = 0.0.7
author = C. Schalkwijk
author_email = c.schalkwijk@ultimaker.com
description = Jira NodeRed automation tools
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved ::Unlicensed
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
